# bloom-project

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml  deploy.yml
cmake/: config.cmake
include/bloom/analysis/: laa.hpp
include/bloom/analysis/loops/: loop-analysis.hpp  loop-detector.hpp
include/bloom/foundation/: analysis-pass.hpp  context.hpp  dbinfo.hpp  module.hpp  node.hpp  pass-context.hpp  pass-manager.hpp  pass.hpp  region.hpp  transform-pass.hpp  type-registry.hpp  typed-data.hpp  types.hpp
include/bloom/ipo/: callgraph.hpp  dce.hpp  gvn.hpp  inlining.hpp  pass-context.hpp  pass-manager.hpp  pass.hpp  specializer.hpp
include/bloom/ipo/experimental/: sccp.hpp
include/bloom/ir/: builder.hpp  print.hpp  tree-visual.hpp
include/bloom/support/: allocator.hpp  bt.hpp  conv.hpp  relation.hpp  string-table.hpp
include/bloom/transform/: adce.hpp  constfold.hpp  cse.hpp  dce.hpp  dse.hpp  pre.hpp  reassociate.hpp  sroa.hpp
include/bloom/transform/instcombine/: instcombine.hpp
include/bloom/transform/vectorize/: slp.hpp
lib/: CMakeLists.txt  lib.cpp
lib/analysis/: CMakeLists.txt  laa.cpp
lib/analysis/loops/: loop_analysis.cpp  loop_detector.cpp
lib/foundation/: CMakeLists.txt  analysis-pass.cpp  context.cpp  dbinfo.cpp  module.cpp  pass-context.cpp  pass-manager.cpp  region.cpp  type-registry.cpp  typed-data.cpp
lib/ipo/: CMakeLists.txt  callgraph.cpp  dce.cpp  inlining.cpp  pass-context.cpp  pass-manager.cpp  specializer.cpp
lib/ipo/experimental/: sccp.cpp
lib/ir/: CMakeLists.txt  ansi.hpp  builder.cpp  print.cpp  tree-visual.cpp
lib/support/: CMakeLists.txt  string-table.cpp
lib/transform/: CMakeLists.txt  adce.cpp  constfold.cpp  cse.cpp  dce.cpp  dse.cpp  pre.cpp  reassociate.cpp  sroa.cpp
lib/transform/instcombine/: instcombine.cpp
lib/transform/vectorize/: slp.cpp
tests/__dnt/: test_printer.cpp
tests/analysis/: laa.cpp
tests/analysis/loops/: loop_analysis.cpp
tests/foundation/: analysis-pass.cpp  context.cpp  dbinfo.cpp  module.cpp  node.cpp  pass-context.cpp  pass-manager.cpp  pass.cpp  region.cpp  type-registry.cpp  typed-data.cpp
tests/ipo/: callgraph.cpp  dce.cpp  inlining.cpp  pass-infra.cpp  specializer.cpp
tests/ipo/experimental/: sccp.cpp
tests/ir/: builder.cpp
tests/support/: allocator.cpp  bt.cpp  string-table.cpp
tests/transform/: adce.cpp  constfold.cpp  cse.cpp  dce.cpp  dse.cpp  pre.cpp  reassociation.cpp  sroa.cpp
tests/transform/instcombine/: instcombine.cpp
tests/transform/vectorize/: slp.cpp
www/: getting-started.md  index.md  package.json
www/.vitepress/: config.ts
